--- a/about-me.html
+++ b/about-me.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>ABOUT ME</title>
   
+  <link rel="stylesheet" type=text/css href="styles/first-stylesheet.css"
+  
 </head>
 
 <body>
@@ -13,9 +15,11 @@
     <img src="images/image-placeholder.jpg" alt="Me">
     
     <nav>
-      <a href="index.html" target="_blank">HOME</a>
-      <a href="about-me.html" target="_blank">ABOUT ME</a>
-      <a href="#" target="_blank">PROJECTS</a>
+      <ul>
+        <li><a class="active" href="index.html" target="_blank">HOME</a></li>
+        <li><a href="about-me.html" target="_blank">ABOUT ME</a></li>
+        <li><a href="#" target="_blank">PROJECTS</a></li>
+      </ul>
     </nav>
   </header>
   
@@ -51,12 +55,6 @@
   <footer>
     <!-- Copyright info and secondary navigation -->
     <p>&copy; 2017 || P March</p>
-  
-    <nav>
-      <a href="index.html" target="_blank">HOME</a>
-      <a href="about-me.html" target="_blank">ABOUT ME</a>
-      <a href="#" target="_blank">PROJECTS</a>
-    </nav>  
   </footer>
   
 </body>
