--- a/about-me.html
+++ b/about-me.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>ABOUT ME</title>
   
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Neuton" rel="stylesheet">
+  
   <link rel="stylesheet" type=text/css href="styles/first-stylesheet.css"
   
 </head>
