--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>PORTFOLIO</title>
   
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+  
   <link rel="stylesheet" type=text/css href="styles/first-stylesheet.css">
   
 </head>
