--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <title>PORTFOLIO</title>
   
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Neuton" rel="stylesheet">
   
+  <script src="https://use.fontawesome.com/cb71c62463.js"></script>
+  
+  <link rel="stylesheet" type="text/css" href="styles/meyer-reset.css">
   <link rel="stylesheet" type=text/css href="styles/first-stylesheet.css">
   
 </head>
@@ -19,7 +22,7 @@
     <nav>
       <ul>
         <li><a class="active" href="index.html" target="_blank">HOME</a></li>
-        <li><a href="about-me.html" target="_blank">ABOUT ME</a></li>
+        <li><a href="about-me.html" target="_blank">ABOUT</a></li>
         <li><a href="#" target="_blank">PROJECTS</a></li>
       </ul>
     </nav>
@@ -63,7 +66,10 @@
 
   <footer>
     <!-- Copyright info and secondary navigation -->
-    <p>&copy; 2017 || P Marche</p> 
+    <p>
+      <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
+      <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+      <i class="fa fa-pinterest fa-2x" aria-hidden="true"></i></p> 
   </footer>
     
 </body>
