added font awesome icons

--- a/about-me.html
+++ b/about-me.html
@@ -19,7 +19,7 @@
     <nav>
       <ul>
         <li><a class="active" href="index.html" target="_blank">HOME</a></li>
-        <li><a href="about-me.html" target="_blank">ABOUT ME</a></li>
+        <li><a href="about-me.html" target="_blank">ABOUT</a></li>
         <li><a href="#" target="_blank">PROJECTS</a></li>
       </ul>
     </nav>
@@ -56,7 +56,10 @@
     
   <footer>
     <!-- Copyright info and secondary navigation -->
-    <p>&copy; 2017 || P March</p>
+    <p>
+      <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
+      <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+      <i class="fa fa-pinterest fa-2x" aria-hidden="true"></i></p> 
   </footer>
   
 </body>
