--- a/about-me.html
+++ b/about-me.html
@@ -6,8 +6,7 @@
   
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Neuton" rel="stylesheet">
   
-  <link rel="stylesheet" type=text/css href="styles/first-stylesheet.css"
-  
+  <link rel="stylesheet" type=text/css href="styles/first-stylesheet.css">
 </head>
 
 <body>
