added footer & social media links

--- a/index.html
+++ b/index.html
@@ -66,21 +66,12 @@
     <p><a href="www.google.com" target="_blank">Lorem Ipsum</a><br />
     <i>Sed cursus ante dapibus diam. Sed nisi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam nec ante.</i></p>
   </article>  
-   
-  <!-- Exra Info -->
-  <aside>
-    <h3>More Info</h3>
-    <p>Praesent libero. Sed cursus ante dapibus diam.<br />
-    Contact: Sednisi@gheresi.com</p>
-  </aside>
 
   <!-- Copyright info and secondary navigation -->
   <footer>
-    <p>
-      <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
-      <i class="fa fa-github fa-2x" aria-hidden="true"></i>
-      <i class="fa fa-pinterest fa-2x" aria-hidden="true"></i>
-    </p> 
+      <a href="www.linkedin.com" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
+      <a href="www.github.com" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+    <a href="www.pinterest.com" target="_blank"><i class="fa fa-pinterest fa-2x" aria-hidden="true"></i></a>
   </footer>
     
 </body>
