updated footer alignment

--- a/index.html
+++ b/index.html
@@ -69,9 +69,16 @@
 
   <!-- Copyright info and secondary navigation -->
   <footer>
+    <section class="follow">
+      <!--<p class="connect">CONNECT</p> -->
       <a href="www.linkedin.com" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
       <a href="www.github.com" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-    <a href="www.pinterest.com" target="_blank"><i class="fa fa-pinterest fa-2x" aria-hidden="true"></i></a>
+      <a href="www.pinterest.com" target="_blank"><i class="fa fa-pinterest fa-2x" aria-hidden="true"></i></a>
+    </section>
+    <!---
+    <section class="right">
+      <a href="mailto:loremipsum@gmail.com" title="loremipsum@gmail.com">loremipsum@gmail.com</a>
+    </section> -->
   </footer>
     
 </body>
