added images & worked on photo gallery grid

--- a/index.html
+++ b/index.html
@@ -50,38 +50,38 @@
       <section class="row">
         <section class="column">
           <section class="content">
-            <img src="mountains.jpg" alt="Mountains" style="width:100%">
-            <h3>My Work</h3>
-            <p>Lorem ipsum..</p>
+            <img src="images/cactus.jpg" alt="Cactus" style="width:100%">
+            <h3>Sed Nisi</h3>
+            <p class="caption">Lorem ipsum..</p>
           </section>
         </section>
         <section class="column">
           <section class="content">
-            <img src="lights.jpg" alt="Lights" style="width:100%">
-            <h3>My Work</h3>
-            <p>Lorem ipsum..</p>
+            <img src="images/wood.jpg" alt="Wood" style="width:100%">
+            <h3>Libero Sans</h3>
+            <p class="caption">Lorem ipsum..</p>
           </section>
         </section>
         <section class="column">
           <section class="content">
-            <img src="nature.jpg" alt="Nature" style="width:100%">
-            <h3>My Work</h3>
-            <p>Lorem ipsum..</p>
+            <img src="images/oats.jpg" alt="Oats" style="width:100%">
+            <h3>Tacitis</h3>
+            <p class="caption">Lorem ipsum..</p>
           </section>
         </section>
         <section class="column">
           <section class="content">
-            <img src="mountains.jpg" alt="Mountains" style="width:100%">
-            <h3>My Work</h3>
-            <p>Lorem ipsum..</p>
+            <img src="images/flowers.jpg" alt="Flowers" style="width:100%">
+            <h3>Praesent</h3>
+            <p class="caption">Lorem ipsum..</p>
           </section>
         </section>
       </section>
 
       <section class="content">
-        <img src="bear.jpg" alt="Bear" style="width:100%">
-        <h3>Some Other Work</h3>
-        <p>Lorem ipsum..</p>
+        <img src="images/landscape.jpg" alt="Landscape" style="width:100%">
+        <h3>Litora torquent per conubia</h3>
+        <p class="caption">Lorem ipsum..</p>
       </section>
 
     </article>
