updated nav bar class

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
    <!-- header & main nav -->
   <header>
-    <nav class="header-nav">
+    <nav class="headernav">
       <ul>
         <li><a class="link-lorem" href="#" target="_self">LOREM IPSUM</a></li>
         <li><a class="link-projects" href="#" target="_self">PROJECTS</a></li>
