--- a/index.html
+++ b/index.html
@@ -51,28 +51,28 @@
           <section class="content">
             <img src="images/cactus.jpg" alt="Cactus" style="width:100%">
             <h3><a href="https://github.com/pmarcheselli/semantic_tags.git" target="_blank">Sed Nisi</a></h3>
-            <p class="caption">Lorem ipsum..</p>
+            <p class="caption">Vulputate imperdiet curabitur</p>
           </section>
         </section>
         <section class="column">
           <section class="content">
             <img src="images/wood.jpg" alt="Wood" style="width:100%">
             <h3><a href="https://github.com/pmarcheselli/au-17-week1.git" target="_blank">Libero Sans</a></h3>
-            <p class="caption">Lorem ipsum..</p>
+            <p class="caption">Lorem dolor signa persa conu</p>
           </section>
         </section>
         <section class="column">
           <section class="content">
             <img src="images/oats.jpg" alt="Oats" style="width:100%">
             <h3><a href="https://github.com/pmarcheselli/au-17-week1.git" target="_blank">Tacitis</a></h3>
-            <p class="caption">Lorem ipsum..</p>
+            <p class="caption">Praesent libero et integere</p>
           </section>
         </section>
         <section class="column">
           <section class="content">
             <img src="images/flowers.jpg" alt="Flowers" style="width:100%">
             <h3><a href="https://github.com/pmarcheselli/au-17-week1.git" target="_blank">Praesent</a></h3>
-            <p class="caption">Lorem ipsum..</p>
+            <p class="caption">Consectetur adipiscing</p>
           </section>
         </section>
       </section>
@@ -80,7 +80,7 @@
       <section class="content">
         <img src="images/landscape.jpg" alt="Landscape" style="width:100%">
         <h3><a href="https://github.com/pmarcheselli/mockup-practice.git" target="_blank">Litora torquent per conubia</a></h3>
-        <p class="caption">Lorem ipsum..</p>
+        <p class="caption">Leo vitae condimentum aliquam. Nullam nec finibus arcu.</p>
       </section>
 
     </article>
