--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
   <!-- Footer Nav with Social Media Links -->
   <footer>
     <nav class=follow>
-      <a href="www.linkedin.com" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
-      <a href="www.github.com" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-      <a href="www.pinterest.com" target="_blank"><i class="fa fa-pinterest fa-2x" aria-hidden="true"></i></a>
+      <a href="https://www.linkedin.com" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
+      <a href="https://www.github.com" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+      <a href="https://www.pinterest.com" target="_blank"><i class="fa fa-pinterest fa-2x" aria-hidden="true"></i></a>
     </nav>
   </footer>
     
